--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,17 @@ body {
   max-width: 1400px;
   margin: 0 auto;
 }
+
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+}
+
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(/images/viseu-center.jpg);
@@ -53,7 +64,48 @@ header a {
   margin-top: 32px;
 }
 
-@media (max-width: 900px) {
+footer {
+  color: white;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url(/images/viseu.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 100px 0;
+}
+
+footer h3 {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+footer ul {
+  padding-left: 0;
+}
+
+footer li {
+  list-style: none;
+}
+
+footer a {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: white;
+  opacity: 0.7;
+}
+
+footer p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: left;
+  opacity: 0.7;
+  margin-right: 20px;
+}
+
+@media (max-width: 960px) {
   header {
     padding: 60px 0;
   }
