Added Main section to the landing page

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 body {
   font-family: "Poppins", sans-serif;
+  background-color: #f4f2ee;
 }
+
 .container {
   max-width: 1400px;
   margin: 0 auto;
@@ -9,10 +11,19 @@ body {
 section {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 100px 0;
 }
 
 .grid {
   display: grid;
+  gap: 64px;
+}
+
+.grid-2-columns {
+  grid-template-columns: 1fr 1fr;
+}
+
+.grid-3-columns-first-narrow {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
@@ -64,14 +75,45 @@ header a {
   margin-top: 32px;
 }
 
+main {
+  background-color: white;
+}
+
+main img {
+  max-width: 100%;
+}
+
+main h3 {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  opacity: 0.3;
+  margin: 0;
+}
+
+main h2 {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.5;
+  margin: 0;
+}
+
+main p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: justify;
+}
+
 footer {
   color: white;
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(/images/viseu.jpg);
+    url(/images/garden-viseu.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding: 100px 0;
 }
 
 footer h3 {
@@ -100,9 +142,7 @@ footer p {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
-  text-align: left;
   opacity: 0.7;
-  margin-right: 20px;
 }
 
 @media (max-width: 960px) {
@@ -120,5 +160,14 @@ footer p {
 
   header h3 {
     font-size: 12px;
+  }
+
+  .grid {
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
+
+  section {
+    padding: 30px;
   }
 }
