--- a/src/styles.css
+++ b/src/styles.css
@@ -3,15 +3,23 @@ body {
   background-color: #f4f2ee;
 }
 
+.text-centered {
+  text-align: center;
+}
+
 .container {
   max-width: 1400px;
   margin: 0 auto;
 }
 
 section {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px;
+}
+
+section.secondary {
+  background: #e7e5e2;
 }
 
 .grid {
@@ -23,8 +31,44 @@ section {
   grid-template-columns: 1fr 1fr;
 }
 
+.grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 .grid-3-columns-first-narrow {
   grid-template-columns: 1fr 2fr 2fr;
+}
+
+.card {
+  background: white;
+  margin: 30px 0;
+}
+
+.card-body {
+  padding: 30px 30px 0 30px;
+}
+
+.card-footer {
+  padding: 30px;
+}
+
+.img-responsive {
+  max-width: 100%;
+  display: block;
+}
+
+.button {
+  display: block;
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.5;
+  letter-spacing: 3px;
+  text-align: center;
+  padding: 16px;
+  background-color: #f4f2ee;
 }
 
 header {
@@ -79,10 +123,6 @@ main {
   background-color: white;
 }
 
-main img {
-  max-width: 100%;
-}
-
 main h3 {
   font-size: 16px;
   font-weight: 700;
@@ -95,6 +135,20 @@ main h3 {
 
 main h2 {
   font-size: 40px;
+  font-weight: 700;
+  line-height: 1.5;
+  margin: 0;
+}
+
+main h4 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1.5;
+  margin: 0;
+}
+
+main h5 {
+  font-size: 13px;
   font-weight: 700;
   line-height: 1.5;
   margin: 0;
