--- a/src/styles.css
+++ b/src/styles.css
@@ -39,9 +39,18 @@ section.secondary {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
+.embed {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+}
+
 .card {
   background: white;
   margin: 30px 0;
+}
+
+.card-header.grid {
+  gap: 0;
 }
 
 .card-body {
@@ -223,5 +232,13 @@ footer p {
 
   section {
     padding: 30px;
+  }
+
+  .card-header img {
+    display: none;
+  }
+
+  .card-header .embed {
+    aspect-ratio: 16 / 9;
   }
 }
