--- a/src/styles.css
+++ b/src/styles.css
@@ -80,6 +80,10 @@ section.secondary {
   background-color: #f4f2ee;
 }
 
+.instagram-embed {
+  margin: 30px 0;
+}
+
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(/images/viseu-center.jpg);
