--- a/src/styles.css
+++ b/src/styles.css
@@ -216,6 +216,12 @@ footer p {
   opacity: 0.7;
 }
 
+@media (max-width: 1024px) {
+  .instagram-container .grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 @media (max-width: 960px) {
   header {
     padding: 60px 0;
@@ -248,5 +254,13 @@ footer p {
 
   .card-header .embed {
     aspect-ratio: 16 / 9;
+  }
+
+  .instagram-container {
+    padding: 0;
+  }
+
+  .instagram-container .grid {
+    grid-template-columns: 1fr;
   }
 }
